--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -53,20 +53,7 @@
     </div>
 </div> <!-- /container - #page -->
 <!-- TODO: implement
-<div class="modal" id="modalVerificationError" role="dialog" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title"></h5>
-                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-            </div>
-        </div>
-    </div>
-</div>
+<div th:replace="fragments/modal :: modal-registration-error"></div>
 -->
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
 </body>
