--- a/src/main/resources/templates/pages/login-employee.html
+++ b/src/main/resources/templates/pages/login-employee.html
@@ -10,12 +10,14 @@
     <div id="header" class="row header-default">
         <header th:replace="fragments/header :: head-login"></header>
     </div>
+
     <div id="main-content">
         <main role="main" class="min-vw-100">
 
-            <div class="container-my-3">
+            <div class="container-my-6">
                 <div class="row">
-                    <div class="col-md-8 mx-auto">
+                    <div class="col-md-4 col-sm-4 col-m-12"></div>
+                        <div class="col-md-4 col-sm-4 col-m-12">
                         <h2>Inloggen medewerker</h2>
                         <form class="form-horizontal" action="#" th:action="@{/loginemployee}" method="post">
 
