--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -2,7 +2,7 @@
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <link rel="stylesheet" src="bootstrap.css">
 <link rel="stylesheet" src="custom.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script defer src="/js/openAccount.js"></script>
 <head th:replace="fragments/head :: head-default (pageTitle='Rekening Openen', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <meta charset="UTF-8">
 <head>
@@ -14,7 +14,6 @@
     <div id="header" class="row header-default">
         <header th:replace="fragments/header :: header-default"></header>
     </div>
-
     <div id="main-content" align="center">
         <main role="main" class="min-vw-100">
             <div class="jumbotron"
@@ -27,17 +26,14 @@
                         <h1 align="center"><span class="text-orange"> Rekeninghouder: </span><span
                                 style="color: #0066ff" th:text="${nameCurrentCus}"></span></h1>
                         <p><br></p>
-                        <form action="/saveaccount" method="post" name="ibanForm">
+                        <form action="/saveaccount" method="post" name="ibanForm" class="needs-validation">
                             <input type="text" th:field="*{customer.customerID}" value="customer.customerID" hidden/>
 
                             <div class="form-group w-25">
                                 <label for="ibanGenerator">Uw nieuwe rekeningnummer:</label>
                                 <input type="text" th:field="*{account.iban}" id="ibanGenerator"
-                                       placeholder="IBAN" required/>
-                                <label id="error" hidden>
-                                    Ongeldige IBAN, probeer het opnieuw.
-                                </label>
-                            </div>
+                                       placeholder="IBAN" readonly required/>
+                                </div>
                             <div class="form-group w-25">
                                 <label for="balance">Uw huidige saldo:</label>
                                 <input type="text" th:field="*{account.balance}" id="balance" class="form-control"
@@ -94,80 +90,5 @@
         </div>
     </div>
 </div>
-<script>
-
-    window.onload = function random() {
-        let country_code = "NL"
-        let bank_code = "DROVN";
-        let IBAN = "";
-        let string_length = 11;
-        let characters = "0123456789";
-        for (let i = 0; i < string_length; i++) {
-            IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
-        }
-        let first_part = IBAN.substring(0, 2)
-        let final_IBAN = IBAN.substring(0, 9);
-
-        return document.ibanForm.ibanGenerator.value = country_code + first_part + bank_code + final_IBAN;
-    }
-
-    let popupWindow = null;
-    function centeredPopup(url, winName, w, h, scroll) {
-        LeftPosition = (screen.width) ? (screen.width - w) / 2 : 0;
-        TopPosition = (screen.height) ? (screen.height - h) / 2 : 0;
-        settings =
-            'height=' + h + ',width=' + w + ',top=' + TopPosition + ',left=' + LeftPosition + ',scrollbars=' + scroll + ',resizable'
-        popupWindow = window.open(url, winName, settings);
-
-    }
-
-
-        document.querySelector("#ibanGenerator").addEventListener("click", checkUniqueIban);
-        let iban = document.getElementById('ibanGenerator').value;
-
-
-    function checkUniqueIban() {
-        let regex = new RegExp(/^[A-Za-z]{2}[0-9]{2}[A-Za-z0-9]{1,30}$/i);
-        let iban = document.querySelector("#ibanGenerator").value;
-            let formData = `ibanGenerator=${iban}`
-            console.log('Iban is valide: ' + regex.test(iban))
-
-            if(regex.test(iban)){
-
-            fetch("http://localhost:8080/check_iban", {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded'},
-                body: bodyContent
-            })
-                .then(response => {
-
-                    if(response.status === 200){
-                        console.log('De iban is niet gevonden in de DB')
-                        let iban = response.text()
-                        processIban(iban)
-                        return response.json()
-                    } else if(response.status === 401) {
-                        console.log("iban wel gevonden gevonden")
-                        processError();
-                    }
-                })
-                // .then(data => processIban(data))
-                .catch(error => {
-                    console.log('Foutje ergens! ' + error)
-                })
-            ;
-            }
-    }
-    function processIban(iban){
-        document.getElementById('error').style.display = 'none';
-        document.getElementById('iban').classList.remove('error');
-    }
-
-    function processError(){
-        document.getElementById('error').style.display = 'block';
-        document.getElementById('iban').classList.add('error');
-    }
-</script>
 </body>
 </html>
