Added fragments for jumbotron, main & main-content

--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -17,4 +17,21 @@
     </div>
 </div>
 
+<div class="modal" id="modalNewAccount" role="dialog" tabindex="-1" th:fragment="modal-new-account">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Klantregistratie voltooid</h5>
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Hartelijk welkom als nieuwe klant van DROVN-Bank.</p>
+                <p>Vanaf nu kun je <a href="/login">inloggen</a> met je gebruikersnaam en wachtwoord.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 </html>
