--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -7,46 +7,7 @@
         <header th:replace="fragments/header :: header-home"></header>
     </div>
     <div class="row mb-5" id="main-content">
-        <main class="min-vw-100" role="main">
-            <div class="jumbotron mb-5"
-                 style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0) ), url('/images/klant-worden.jpg'); background-position: left 70%; background-repeat: no-repeat; background-size: cover;">
-                <div class="container text-white">
-                    <h1>Klant worden</h1>
-                </div>
-            </div>
-            <div class="container pt-5">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div id="values"></div>
-                    </div>
-                    <div class="col-md-12">
-                        <button aria-controls="collapseOne" aria-expanded="true"
-                                class="btn btn-outline-primary rounded-3 pt-3 pb-3 pl-5 pr-5 active"
-                                data-target="#collapseOne" data-toggle="collapse"
-                                id="private">
-                            Particuliere Klant
-                        </button>
-                        <button aria-controls="collapseTwo" aria-expanded="false"
-                                class="btn btn-outline-primary rounded-3 pt-3 pb-3 pl-5 pr-5 collapsed"
-                                data-target="#collapseTwo" data-toggle="collapse"
-                                id="legal">
-                            Zakelijke Klant
-                        </button>
-                        <div class="pt-5 pb-5" id="accordion">
-                            <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
-                                 id="collapseOne">
-                                <form th:replace="fragments/form :: form-registration-private"></form>
-                            </div>
-                            <div aria-labelledby="headingTwo" class="collapse" data-parent="#accordion"
-                                 id="collapseTwo">
-                                <form th:replace="fragments/form :: form-registration-business"></form>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </main>
+        <main th:replace="fragments/main :: main-registration"></main>
     </div>
     <div class="row footer-default" id="footer">
         <footer th:replace="fragments/footer :: footer-default"></footer>
