--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
 <header class="header min-vw-100 navbar-light bg-light" id="header-main" th:fragment="header-home">
     <div class="container pl-0 pr-0">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img alt="" class="d-inline-block align-top" height="50" src="/images/DROVN2.svg" width="50">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -69,7 +69,7 @@
 <header class="header min-vw-100 navbar-light bg-light" id="header-main" th:fragment="header-default">
     <div class="container pl-0 pr-0">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img alt="" class="d-inline-block align-top" height="50" src="/images/DROVN2.svg" width="50">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -133,7 +133,7 @@
 
 <header class="header" id="header-login" th:fragment="header-login">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="https://getbootstrap.com//docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
                  class="d-inline-block align-top" alt="">
             Bootstrap
