View account_details aangepast

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -118,9 +118,11 @@
                 </ul>
                 <div class="container pl-0 pr-0">
                     <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
-                        <a class="btn btn-primary mr-2" th:href="@{openaccount}">Rekening Openen</a>
+                        <a class="btn btn-primary mr-2" href="/open-account">Rekening Openen</a>
+<!--                        <a class="btn btn-primary mr-2" href="/registratie">Klant worden</a>-->
                         <a class="btn btn-outline-primary mr-2" href="/">Uitloggen</a>
                     </div>
+
                 </div>
                 <!--<form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
