--- a/src/main/resources/templates/pages/account-overview.html
+++ b/src/main/resources/templates/pages/account-overview.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
-<link rel="stylesheet" src="bootstrap.css">
-<link rel="stylesheet" src="custom.css">
-<head th:replace="fragments/head :: head-default (pageTitle='Account Details', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
+<html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<head th:replace="fragments/head :: head-default (pageTitle='Rekeningoverzicht', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 
 <body>
 <div class="container-fluid min-vh-100" id="page">
