--- a/src/main/resources/templates/pages/account_details.html
+++ b/src/main/resources/templates/pages/account_details.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
-<link rel="stylesheet" src="bootstrap.css">
-<link rel="stylesheet" src="custom.css">
-<head th:replace="fragments/head :: head-default (pageTitle='Transaction Details', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
+<html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+
+<head th:replace="fragments/head :: head-default (pageTitle='Transactieoverzicht', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 
 <body>
 <div class="container-fluid min-vh-100" id="page">
@@ -15,7 +14,7 @@
             <div class="jumbotron"
                  style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0) ), url('/images/DROVN5.svg'); background-position: left center; background-repeat: no-repeat; background-size: cover; width: 90%; max-height: 60%">
                 <div class="container pt-sm-2 pb-sm-2 text-white">
-                    <h1 align="left"><span class="display-4 h-25"><span style="color: #0066ff" th:text="${nameCurrentCus}"></span> | <span class="text-orange">Transactieoverzicht</span></span>
+                    <h1 align="left"><span class="display-4 h-25"><span style="color: #0066ff" th:text="${nameCurrentCus}"></span> | <span class="text-orange">Bij- en afschrijvingen</span></span>
                     </h1>
                     <p> <br></p>
                     <h3 align="right"><span style="color: #0066ff" th:text="${account.getIban()}">IBAN</span> | <span class="display-5 h-25"><span class="text-orange">Saldo</span> | <span style="color: #0066ff">€ </span><span style="color: #0066ff" th:text="${account.showBalance}">Saldo</span> </h3>
@@ -25,6 +24,17 @@
 <!--                <p class="mt-5"><a class="btn btn-primary btn-lg btn-block" style="font-size: initial; width: 90%" href="#"-->
 <!--                                   role="button">Geld overboeken »</a></p>-->
 <!--            </div>-->
+
+            <form action="#" method="get" th:action="@{/account-overview.html}" th:object="${customer}">
+                <div class="jumbotron-fluid">
+                    <a class="mt-lg-5"><input type="submit" class="btn btn-primary btn-lg btn-block" style="font-size: 150%; width: 90%" role="button"
+                                              value="« Terug naar Rekeningoverzicht"></a>
+                    <p><br></p>
+                </div>
+            </form>
+
+            <div> <br> </div>
+
             <form action="#" method="get" th:action="@{/do-transaction/}" th:object="${customerWithAccountOverview}">
                 <div class="jumbotron-fluid">
                     <a class="mt-lg-5"><input type="submit" class="btn btn-primary btn-lg btn-block" style="font-size: 150%; width: 90%" role="button"
@@ -33,74 +43,68 @@
                 </div>
             </form>
 
+            <div> <br> </div>
+
             <div class="jumbotron" style="background: linear-gradient(65deg, rgba(243, 146, 0, 0.2), rgba(243, 146, 0, 0.2) );background-size: cover; width: 90%; max-height: 60%">
                 <p style="font-size: 250%; color: #F39200" align="center" th:if="${account.getTransactions().isEmpty()}">Er zijn geen bij- en/of afschrijvingen om weer te geven.</p>
                 <div align="center" style="width: border-box">
-                    <!--                    <table style="width: 100%"  class="table-hover" data-sort-name="Date" data-sort-order="desc"-->
-                    <!--                           th:unless="${account.getTransactions().isEmpty()}"-->
-                    <!--                           th:object="${account}">-->
-                    <!--                        <thead>-->
-                    <!--                        <tr>-->
 
-                    <!--                        </tr>-->
+<!--                    <div class="accordion" id="accordionTransactione">-->
+<!--                        <div class="card" style="font-size: 125%" th:each="t : ${account.getTransactions}">-->
+<!--                            <div class="card-header" id="transaction">-->
+<!--                                <h5 class="mb-0">-->
+<!--                                    <button class="btn btn-link" type="button" data-toggle="collapse"-->
+<!--                                            data-target="#collapseOne"-->
+<!--                                            aria-expanded="true" aria-controls="collapseOne">-->
+<!--                                        <p style="color: #312783" th:text="${t.showDate}"></p>-->
+<!--                                        <p style="color: #312783">-->
+<!--                                        <ul class="list-group-horizontal list-inline" style="list-style-type:none; display: table-row">-->
+<!--                                            <li class="list-inline-item" th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" > </li>-->
+<!--                                        </ul>-->
+<!--                                            <p style="color: #312783" class="list-inline-item" th:text="${t.showAmount}"></p>-->
+<!--                                    </button>-->
+<!--                                </h5>-->
+<!--                            </div>-->
+<!--                            <div id="collapseOne" class="collapse show"-->
+<!--                                 aria-labelledby="headingOne" data-parent="#accordionExample">-->
+<!--                                <div class="card-body">-->
+<!--                                    <p style="color: #F39200" th:text="${t.showContraAccount}"></p>-->
+<!--                                    <p style="color: #312783" th:text="${t.description}"></p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
-                    <!--                        </thead>-->
-                    <!--                        <tbody>-->
-                    <!--                            <tr th:each="t : ${accountWithTransactionOverview.getTransactions}">-->
-                    <!--                                <td rowspan="100%" data-field="Date" data-sortable="true" th:text="${t.showDate}"></td>-->
-                    <!--                                   <table th:object="${t.getDate}">-->
-                    <!--                                       <thead class="text-white" bgcolor="#312783">-->
-                    <!--                                       <tr>-->
-                    <!--                                           <th scope="col" style="border-color: #312783; width: 60%">Tegenrekening</th>-->
-                    <!--                                           <th scope="col" style="border-color: #312783; width: 20%; text-align: left">Bedrag</th>-->
-                    <!--                                       </tr>-->
-                    <!--                                       </thead>-->
-                    <!--                                       <tbody>-->
-                    <!--                                       <th:block th:each="${a}">-->
-                    <!--                                           <tr data-toggle="collapse" data-target="#transaction-table" class="accordion-toggle">-->
-                    <!--                                               <td th:text="${t.showAccountName}"></td>-->
-                    <!--                                               <td >€ <span style="text-align: right; color: #F39200" th:text="${t.showAmount}"></span></td>-->
-                    <!--                                           </tr>-->
-                    <!--                                           <tr>-->
-                    <!--                                               <td colspan="3" rowspan="3" class="hiddenRow">-->
-                    <!--                                                   <div class="accordion-body collapse" id="transaction-table" th:text="${t.description}">Omschrijving</div>-->
-                    <!--                                               </td>-->
-                    <!--                                           </tr>-->
-                    <!--                                       </th:block>-->
-                    <!--                                       </tbody>-->
-                    <!--                                   </table>-->
-                    <!--                               </tr>-->
-                    <!--                            </th:block>-->
-                    <!--                        </tbody>-->
 
-                    <!--                    </table>-->
+
+
                     <style>
                         th, td {
                             padding: 20px;
                         }
                     </style>
 
-                    <table style="width: 100%; "  class="table-hover; container-fluid" data-sort-name="Date" data-sort-order="desc"
+                    <table style="width: 100%; "  class="fold-table; container-fluid" data-sort-name="Date" data-sort-order="desc"
                            th:unless="${account.getTransactions().isEmpty()}"
                            th:object="${account}">
                         <thead class="text-white" bgcolor="#312783">
 
                         <tr style="font-size: 150%">
                             <th scope="col" style="width: 20%">Datum</th>
-                            <th scope="col" style="width: 25%">Tenaamstelling</th>
+                            <th scope="col" style="width: 30%">Tenaamstelling</th>
                             <th scope="col" style="width: 20%">Tegenrekening</th>
                             <th scope="col" style="width: 25%">Omschrijving</th>
                             <th scope="col" style="width: 10%; text-align: right">Bedrag</th>
                         </tr>
-
-
                         </thead>
 
                         <tbody>
-                        <tr style="font-size: 150%" th:each="t : ${account.getTransactions}">
+                        <tr style="font-size: 125%" th:each="t : ${account.getTransactions}">
                             <td style="color: #312783" th:text="${t.showDate}"></td>
-<!--                            <td style="color: #312783"> <ul> <li th:each="nameContraCustomer : ${account.getAccountHolderNames()}" th:text="${nameContraCustomer}"></li></ul></td>-->
-                            <td style="color: #312783"><ul style="list-style-type:none; display: table-row;"><li th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}"></ul></td>
+                            <td style="color: #312783">
+                                <ul class="list-group-horizontal list-inline" style="list-style-type:none; display: table-row">
+                                        <li class="list-inline-item" th:each="name : ${t.getContraAccountHolderNames()}" th:text="${name}" > </li>
+                                </ul>
+                            </td>
                             <td style="color: #F39200" th:text="${t.showContraAccount}"></td>
                             <td style="color: #312783" th:text="${t.description}"></td>
                             <td style="text-align: right"><span style="text-align: right; color: #312783" th:text="${t.showAmount}"></span></td>
@@ -109,12 +113,16 @@
                     </table>
                 </div>
             </div>
+
+
         </main>
     </div>
 </div>
 
 </body>
-
+<div id="footer" class="row footer-default">
+    <footer th:replace="fragments/footer :: footer-default"></footer>
+</div>
 <script>
     $('.accordion-toggle').click(function(){
         $('.hiddenRow').hide();
