frontend js, login

--- a/src/main/resources/templates/pages/login-employee.html
+++ b/src/main/resources/templates/pages/login-employee.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/head :: head-login (pageTitle='Login Employee', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
+<head th:replace="fragments/head :: head-login (pageTitle='Login Customer', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
-
-<style>
-</style>
 
 <div class="container-fluid min-vh-100" id="page">
     <div id="header" class="row header-default">
         <header th:replace="fragments/header :: head-login"></header>
     </div>
-
-    <div id="main-content">
+    <div id="main-content" class="row">
         <main role="main" class="min-vw-100">
 
-            <div class="container-my-6">
+            <div class="container-my-3">
                 <div class="row">
-                    <div class="col-md-4 col-sm-4 col-m-12"></div>
-                        <div class="col-md-4 col-sm-4 col-m-12">
+                    <div class="col-md-8 mx-auto">
                         <h2>Inloggen medewerker</h2>
-                        <form class="form-horizontal" action="#" th:action="@{/loginemployee}" method="post">
+                        <form action="#" th:action="@{/loginemployee}" method="post">
 
-                            <div class="col-md-6 form-group">
+                            <div class="col-auto form-group">
                                 <i class="fa fa-user icon"></i>
-                                <label class="control-label" for="validationServer01">Gebruikersnaam</label>
-                                <input type="text" class="form-control is-valid" id="validationServer01" name="userName" required>
-                                <div class="valid-feedback">
-                                    Looks good!
-                                </div>
+                                <label>Gebruikersnaam</label>
+                                <input type="text" class="form-control" name="userName" required
+                                       maxlength="16" minlength="1"
+                                       pattern="^[A-Za-z0-9_]+$">
                             </div>
-                            <div class="col-md-6 form-group">
+
+                            <div class="col-auto form-group">
                                 <i class="fa fa-key icon"></i>
-                                <label class="control-label" for="validationServer02">Wachtwoord</label>
-                                <input type="password" class="form-control is-invalid" id="validationServer02" name="password" required>
-                                <div class="invalid-feedback">
-                                    Please fill in a valid password.
-                                </div>
+                                <label>Wachtwoord</label>
+                                <input type="password" class="form-control" name="password" required>
                             </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" name="remember" value="1"> Onthoud me
-                                </label>
-                            </div>
-                            <div class="col-md-4">
+
+                            <div class="col-md-auto">
                                 <input type="submit" class="btn btn-primary" value="Inloggen">
                             </div>
+
                         </form>
-                        <div class="col-md-4 mx-lg-0"> <br/>
-                            <a th:href="@{/}">Ga terug naar home</a>
+                        <div class="col-md-4 mx-lg-0"><br/>
+                            <a th:href="@{/}">Ga terug naar home</a><br>
                         </div>
                     </div>
                 </div>
@@ -58,9 +47,6 @@
 <div class="row footer-default" id="footer">
     <footer th:replace="fragments/footer :: footer-default"></footer>
 </div>
-
-<script>
-</script>
 
 </body>
 </html>
